# ChangeLog for mail-client/mozilla-thunderbird
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.313 2010/01/22 03:44:08 anarchy Exp $

*mozilla-thunderbird-3.0.1 (22 Jan 2010)

  22 Jan 2010; <anarchy@gentoo.org> +mozilla-thunderbird-3.0.1.ebuild:
  version bump

  29 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  files/thunderbird-gentoo-default-prefs.js:
  refix bug #298044 to set false instead of true

*mozilla-thunderbird-3.0-r1 (29 Dec 2009)

  29 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-thunderbird-3.0-r1.ebuild,
  files/thunderbird-gentoo-default-prefs.js:
  Update prefs to fix imap issues marking mail, bug #298044

  20 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-3.0.ebuild:
  cleanup locale support

  20 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  -mozilla-thunderbird-2.0.0.22.ebuild:
  remove security infected builds.

  19 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-3.0.ebuild:
  Add en-GB linguas support back

  15 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-thunderbird-3.0.ebuild:
  update patchset for sparc users, bug #296883

*mozilla-thunderbird-3.0 (08 Dec 2009)

  08 Dec 2009; Jory A. Pratt <anarchy@gentoo.org>
  +files/1000_fix-menus-gentoo.patch, +mozilla-thunderbird-3.0.ebuild,
  +files/thunderbird-gentoo-default-prefs.js, metadata.xml:
  version bump

  14 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -mozilla-thunderbird-1.5.0.14.ebuild:
  QA: since mips was unable to keyword never versions for 2 years. Drop
  their latest availible.

  20 Sep 2009; Mounir Lamouri <volkmar@gentoo.org>
  mozilla-thunderbird-2.0.0.23.ebuild:
  Stable on ppc. Bug 282549

  12 Sep 2009; Brent Baude <ranger@gentoo.org>
  mozilla-thunderbird-2.0.0.23.ebuild:
  Marking mozilla-thunderbird-2.0.0.23 ppc64 for bug 282549

  11 Sep 2009; Markus Meier <maekke@gentoo.org>