@@ -42,43 +42,7 @@ DIST mozilla-thunderbird-2.0.0.23-tr.xpi 157710 RMD160 696fa89a95fea4f80d1a874e3
 DIST mozilla-thunderbird-2.0.0.23-uk.xpi 194506 RMD160 674ac29d85fa862a824fb126873f26dc922a9c75 SHA1 c9d24580e22a9f7f2d20061da1cc4605636b6d12 SHA256 dc7287c010d7d58abb39b94a542ab21b9a7b29fd3ed1de0bc0ba07112183ca86
 DIST mozilla-thunderbird-2.0.0.23-zh-CN.xpi 147643 RMD160 c3583dd26ec46af990799bcfbf3626b518a3f627 SHA1 18f8e6ebbd89b8bc234bb9f68843bde1dfc97f32 SHA256 463582f33d0b8e49890f982e1908dd91548f25e34c06ac20c1c8bc5647a13e58
 DIST mozilla-thunderbird-2.0.0.23-zh-TW.xpi 153702 RMD160 09ec0fe2116f18a8fbed40cfa387ffede8a343ec SHA1 e6a3fe1a6e704609e312970ac267a4073c7ba44b SHA256 57ede81d222c480dbac72995e1dd73a5b0c9b6feddb66e6c79020c23204e0b8d
-DIST mozilla-thunderbird-3.0-af.xpi 200280 RMD160 1b7c295506782f6da15fbd77967ec0e8abdaf08a SHA1 26bdc051ddb738475ab2be88b0b1dcd0e6277045 SHA256 d2541dbd4dea07db31cc55e955728d2d7c5977808705fa7a53f1001e7ef1ab81
-DIST mozilla-thunderbird-3.0-ar.xpi 218266 RMD160 b9849de441b71469d0e20ce312617cee045f524d SHA1 bec4a50b4193cfbf1989899678c673ac0a569158 SHA256 3042bd04d8833e8df1d37aa956b73f7f87a488307d363eaa6c47f25214fd18dc
-DIST mozilla-thunderbird-3.0-be.xpi 189166 RMD160 9170854257638f527cfcad298d903232a8cefb9f SHA1 c92f69dcc2b10adfe09ffd7128af08c106a49d11 SHA256 fedfda555bfb5593b6ae202d2d7dd006c242b150ef6285c43bbb9e280e3e5daa
-DIST mozilla-thunderbird-3.0-ca.xpi 207484 RMD160 a0717552daad4e1afdec6366d0352eea5b3f9f6e SHA1 a75a45d37d04f630e5feee65864f453ac5404383 SHA256 ec63b0e3364fb12780984c071c5d8f7a8edea2963ff32fd08b6b8aa55fd32fcb
-DIST mozilla-thunderbird-3.0-cs.xpi 207756 RMD160 0128dc8859e6efc28921968e3eba280a6e06ea3e SHA1 89dbf6fac71d426c5f3227e3f929e8e5a6c01c9a SHA256 cde5eaddf1de37356e2f0cf778789b96fa0135be3d1a113ee34ec572fb928fd0
-DIST mozilla-thunderbird-3.0-de.xpi 211361 RMD160 d3c89c755ba2d0caa9d6d0614bfa6539ef92f1f6 SHA1 a841ffdd4244d19ca4c6e6b77cf30beed0a48e84 SHA256 663c8ddeb8258e9645cc9aedf5e5b2724b57ad9e5f8018f37919bfecd4b9db5b
-DIST mozilla-thunderbird-3.0-el.xpi 226881 RMD160 a4b4afbc75d6e3d213cad4fd37a867c4cf903614 SHA1 3bb4cbca44ce1f0a1e4fd30b9bd33bb2b4ac21f9 SHA256 ecb32766910537d242c1600e3a09c056d642429f59f5eb592020963e660bc04b
-DIST mozilla-thunderbird-3.0-en-GB.xpi 193363 RMD160 ff4bf0716c82fa1d048be7abccd10a1feb64041e SHA1 88ea44fe0ed3fab31154ef4090472407e1a55fe8 SHA256 8d0977fde180d8c3717f15766eb36d23747fdb9e76dd3ee1e7c3ce9475b4a1f9
-DIST mozilla-thunderbird-3.0-es-AR.xpi 207602 RMD160 74fe515cee53fa471ae93ea84e6796e6cff05f50 SHA1 7553d80366661f8049a2ab0da7c6255d1a75c726 SHA256 d74084408bf6bb91092726a36d9dfa7b8d979e2c8439a6b621d81ea7fe04f5a4
-DIST mozilla-thunderbird-3.0-es-ES.xpi 168066 RMD160 400158e8dbacc9281f4036838a9ef21ab2264ac5 SHA1 6559e866e86a11f4db1795b9f47803fc23d56994 SHA256 175cf1fd7b8e4b9a538adaad1892ebebd84b636afe24bb24d9ae571eeae53c5d
-DIST mozilla-thunderbird-3.0-et.xpi 210544 RMD160 dc86b11d9097b8b49184bfa257ffd234ea85ee34 SHA1 177ab45c61903722efa66c6d0a21da66377658c1 SHA256 ef9601ad349ceed0d940a42f8fd6b073de922d0e731321e0d87847ff2fabbd62
-DIST mozilla-thunderbird-3.0-eu.xpi 200869 RMD160 6ba99938582b190d41bf7b22638f399a722d8c9c SHA1 6f8b2c2c93984c74688a36a2da12c4eaf01f60ef SHA256 c0cca7570033eeb6b4afe50822f59731145f24e2605fe41a66cb9eadfe9274c0
-DIST mozilla-thunderbird-3.0-fi.xpi 208348 RMD160 d43b9a6997454fae8ebccabad935024a000a4ed0 SHA1 eb6012ba3eb74800924550c287577419eace51ea SHA256 e2110702ad070aaae9b7f4025d8f922de2efeda8f8bdbf09b9997574db921492
-DIST mozilla-thunderbird-3.0-fr.xpi 210244 RMD160 ab2ac5b3e91b6742702971c79c9ec33026aaec59 SHA1 4119f31720781d9b1c17ea19eaff15313bb44738 SHA256 c3576516bcd29988b6d276813d6032a2e6fd82438ea9913ae5c17c4b862b435a
-DIST mozilla-thunderbird-3.0-fy-NL.xpi 209927 RMD160 8ab72e867f5fe68d9f8df747be727ec8f5c362c6 SHA1 6524e85f72bcec4140194c88b7a32bac7b211145 SHA256 470d6d3a77818dbc9b74716aa6a0fc438c9a451f70db85a8b23c0f2648183041
-DIST mozilla-thunderbird-3.0-ga-IE.xpi 208835 RMD160 aab83335a3217591f9a46d6957f8505f41c18cbd SHA1 89918515c03176ffd75c11c9e1a3e3cad76a7c90 SHA256 4148523327dfffbde4745947b41ba0cfae772158b91400c100e5fabaf7feb868
-DIST mozilla-thunderbird-3.0-hu.xpi 215531 RMD160 d04c6d749f6df5108597a4e9558fb839213f13e7 SHA1 f3879dfe822fc266e53f64b36ddc4ddfc91bb089 SHA256 9f81cb0af92ced8971b40128347b154072e9e20933784b8d20cb636cc5cc5842
-DIST mozilla-thunderbird-3.0-id.xpi 168247 RMD160 2a0b8a53e5ea72bc818cc459a817b6409655f99c SHA1 dc1e8f43a59b6f9803e907d99a2ac12e9cf9b22f SHA256 e2ab485f61b81e57cc0bc56e6a836951d35ba189ccc010ba552339a11e4d4590
-DIST mozilla-thunderbird-3.0-is.xpi 203595 RMD160 842acd97a80bd94e23f31c9d2d9e4cd18de80551 SHA1 aa064ef10fb298b158c24e6d12f11ff0f5c2b01a SHA256 c8024818877d61a26e49d33e5e4c7ef7473f89179a85a28b9621b692cbf613b3
-DIST mozilla-thunderbird-3.0-it.xpi 167141 RMD160 7785e7e5f485a4830ec46a083aa5121830ad4bd0 SHA1 17042a47ff14c345df4ba3fe4649d74279474044 SHA256 97bb61b20ee26194410d0d32ba34d1b4bad7b0f2d46cb6b6cb7259b349e50710
-DIST mozilla-thunderbird-3.0-ja.xpi 224356 RMD160 0b58650987fb18b62c4a224db39998541aa562c5 SHA1 6f5dd3460752dd9f0a9599a3c08b6c3d79ac56ad SHA256 e5b5ef8324fc18a8a729ad78cbb8222a38af18062a481a1993a890942d58b126
-DIST mozilla-thunderbird-3.0-ko.xpi 186348 RMD160 4998522d344ba050bacf9e1ab90b4ebbd786454d SHA1 2434cb326c52c398acdc7a2108e0718ad034edbb SHA256 a66a1d1dcbb1f1999c6fab575863ff118f5599f1c0bd81e87d9481c469030bd1
-DIST mozilla-thunderbird-3.0-lt.xpi 224274 RMD160 e125e818d53529ed206ca49465e4f73c129e220f SHA1 6c36193b6a785cd0454656ea5202a85ba73c0005 SHA256 0be549d6dd70e6e1ece3ab131967d2f46ffe38c213903747e78b50f7fd6cdbcd
-DIST mozilla-thunderbird-3.0-nb-NO.xpi 202668 RMD160 aa62c0953159029cc2f5fe613409c9ef23a5b0e2 SHA1 fd3df71d436c66cfc0940c576d1fc41d4d62b5a4 SHA256 9e9f8f967f7c49a21a6d5c66cd1eb193ae5454edf0c7bac0348922fc2b92a22f
-DIST mozilla-thunderbird-3.0-nl.xpi 205712 RMD160 85b969b20e2c056213940fc85e4807a94cd154a6 SHA1 34f125743550866fd099c078bf50aa3852c8a3fe SHA256 2dca8ccf437f2734d1770933434cc183ac5c1e01fc3c526530eb9099467662c7
-DIST mozilla-thunderbird-3.0-nn-NO.xpi 204451 RMD160 112a37c5dec1432ccee5a95c293a80499f829cda SHA1 53a81cb70239a742055dfee94428b66db183fe33 SHA256 364b1d5b026555c5ab43d0f6e9326985a431ea3fe4677ebce3684d00df431c1a
-DIST mozilla-thunderbird-3.0-pa-IN.xpi 230400 RMD160 056e14926cd492699e78e65acfa167a77b8a9659 SHA1 3e3b75ae40645362015ce036cebc3ed8624f849d SHA256 e1fcbbee9dfb8c439ed3c247a97b618b3c0a3d8b3cda6dd0643de8f800321e65
 DIST mozilla-thunderbird-3.0-patches-0.3.tar.bz2 3241 RMD160 bc3b163b9c5bd7c7fb497786b2dc2da4e0a4bd28 SHA1 0182b73d48cd21204504f3bb8e17f0d9a7289464 SHA256 a430c71a12fe63662d43b4eeb5b185841a4788cbbbbd7178a3c73056ba94c5cd
-DIST mozilla-thunderbird-3.0-pl.xpi 197864 RMD160 d4ae1645a91c3a3fcf93c78a67284b3edae632d0 SHA1 efa115833ebc3605d1498b9cb21f19d6bd06b00c SHA256 2e682dc4eb95a604671eaf8d716b5b0f6ffc6cb94671f95bd4fa33e44fe098cf
-DIST mozilla-thunderbird-3.0-pt-BR.xpi 204053 RMD160 9f53befadddcea85dda6e7b30b1a2a765d781ac5 SHA1 93cf85f97a0f07e52aebc2fbb8ceb537f841b938 SHA256 88d88344c4a19b9e3bfe186d88e5b540f607101f967371e501e06e4491993779
-DIST mozilla-thunderbird-3.0-ro.xpi 210123 RMD160 6921e878edf45d5d859e92cc87725dc0a802aff2 SHA1 476f8cfb4edd29b324b4fb3b0565577565274ebe SHA256 f46d2f2b5d1e05bd30633566b2115fdb661a18fe50712379f21e3077e1452bf2
-DIST mozilla-thunderbird-3.0-ru.xpi 192056 RMD160 fee3eb976268859b5f6fd2c1ae4d3327c12ff8f4 SHA1 180a927ec86b50150df15fb72b762a5571e3bdf5 SHA256 8e26b7c87554acbf039a36e4015817d31fee7a67604a42202ca7953e48bb46fe
-DIST mozilla-thunderbird-3.0-si.xpi 233873 RMD160 e32af48d97efc62fd1a389eb09a9f40fc79e4e65 SHA1 1937840d3dbde5581f82fbdf66817fa0244a23af SHA256 b64530de03e2febac347f06cffa0c3edc4696906820f1e1de10b30ff8f2e865d
-DIST mozilla-thunderbird-3.0-sk.xpi 213229 RMD160 efd217646ce916bbe0b53f23ad3db7e1ffdb7aaa SHA1 262fd5d8279764939bde065628c456ec426387ea SHA256 5bf053a370dee4303b800a48b66c0a0f7dd6793fcd1f191a3309fd57afec7db3
-DIST mozilla-thunderbird-3.0-sv-SE.xpi 210593 RMD160 9aa0a382c93d731b0d56d439cd0d49a6f7683a05 SHA1 78bcfebd075344edaee8e2006173d064f4779c48 SHA256 5417396d31f2e636f93d505685373c0e287548763855846267070c67c9c1eca4
-DIST mozilla-thunderbird-3.0-ta-LK.xpi 240882 RMD160 446849da2e5f03a48d73344489a1730ce69ecb5d SHA1 6bd4e077e0758400f61c4dfa5bd3ae38a26082d9 SHA256 1e11599bab255452792d26d3dff9f92c7bc3f4a4e845e6c4eee45bd49271eee5
-DIST mozilla-thunderbird-3.0-uk.xpi 231307 RMD160 d5dd9c4e59fdc216f63a42bb5236d4ddc87173bc SHA1 39807b46cddcdb7de95401b5a190dbf5d682c3eb SHA256 53d530da456ea6c4eddb45123d097518b2f8bd06085eb01f40e1a752cea3a0f7
 DIST mozilla-thunderbird-3.0.1-af.xpi 200289 RMD160 0ba6fa08f107123d8417d3a47cf537fb4a73e1e4 SHA1 e2a379be9e0f0e83b19ff8eeb4ff803b308882ab SHA256 7d092e17ca560733b2c40462abb41a5a38176f612c0acaaffe4852501a785fe1
 DIST mozilla-thunderbird-3.0.1-ar.xpi 218224 RMD160 c371e96dcc1b9095384b01d619fae944bb8d3df6 SHA1 010c0434518547e9fdd614bbf58c4384b3749e14 SHA256 cf9e8ed03949b2e49654033568a4405f07737737c43707aae8076faa6b05cd5f
 DIST mozilla-thunderbird-3.0.1-be.xpi 189161 RMD160 fbf69cba5a35c809dda6678a467090a8af93f1a3 SHA1 9fbb877fb55b01ca14856d0204dcd18174fc14cd SHA256 76ce5a2b3665de57783ecaf191a34d9ebfecddd2df5651109bed684f6a8c5570
@@ -114,12 +78,11 @@ DIST mozilla-thunderbird-3.0.1-si.xpi 233853 RMD160 036be170cc2322ae8e1d0852092b
 DIST mozilla-thunderbird-3.0.1-sk.xpi 213280 RMD160 9623d03e62d422225534148c498db85b1c6f87ae SHA1 5722eb80d4ac60e80341c30dd2c045dc960f3bdf SHA256 6746fe6875392cc4a8f81d2d592a77d1f6a058befc67ace75f72ded1706c17cf
 DIST mozilla-thunderbird-3.0.1-sv-SE.xpi 210592 RMD160 4c1a4d23fb114f60f1246452a2832f2d0dd7ce62 SHA1 742593dc9fc58222b8316997c2beff756de031e1 SHA256 ba30fec6410e7f89b3c9f7a57781ffa610114501e0155da8f7a2faac0c809a40
 DIST mozilla-thunderbird-3.0.1-ta-LK.xpi 240877 RMD160 dcd54a1384b0709ce62c365c98ac3e3d62177547 SHA1 10eb2cec7912bad97e9fea37bf08604ad5a45355 SHA256 b0c3c14d98eb54e2a8744ce8534fe8e8557d179d4ce723ff596934d88f436d18
+DIST mozilla-thunderbird-3.0.1-tr.xpi 205346 RMD160 09c010cf11148a9110029c7c1b36d9934a938ef6 SHA1 152caf83890b830982a089665b8c27a084cf45be SHA256 8a9a5b82ed07004120da2e87d8a8e4a3ab9ff35a65f7c838666a374c43362d7c
 DIST mozilla-thunderbird-3.0.1-uk.xpi 231312 RMD160 c85856774dd92b0e022e1f1552df0b130e9e916d SHA1 754bf42571e9741377de3bb2b1b0904c2ee9c26f SHA256 720f7cb95588f4c05ddfdc40ba791b160484d1f73b7f4cbeb237781207622c28
 DIST thunderbird-2.0.0.23-source.tar.bz2 38860245 RMD160 a1ef4af80121cdd8000c796e0c5fb575bea30348 SHA1 a237bfb92ec9c4b2bed7ea744e95d01ec43e07f1 SHA256 2c5007dfa1d094d8f089d42208e77d673e811a49980b7df77b04ed1606d30d21
 DIST thunderbird-3.0.1.source.tar.bz2 59932577 RMD160 47058d3ce13287854a34a61ccaa1b4fcea667294 SHA1 0545a63a0b9015de166a323ae530745039ac9b93 SHA256 de53a892ffcad7217f17214c15709aba5ba3c5302939d122a28e2515768632af
-DIST thunderbird-3.0.source.tar.bz2 60022838 RMD160 bb2fb69319ec99da9fefe7fcf36456222050f4e5 SHA1 7a8a08f011901b4c0b737de2d7a226242935543d SHA256 750fc955e4474eef9ec36e8193df2811bcafb2b8cf27ecc0ebe65cec2eb33067
 EBUILD mozilla-thunderbird-2.0.0.23.ebuild 7772 RMD160 ab0464cb5534923542bcb0474f854396101f82f3 SHA1 04b887ea17377b9c9ac05bd66af0972346c2ecad SHA256 5dfbc461e543f3a1c5f3a75107b93d4cd8da272ed69a8ba7bdbabf9272a54f01
-EBUILD mozilla-thunderbird-3.0-r1.ebuild 7131 RMD160 01bb17d4a3c48420bafb5f1bb8c66f365c94ba48 SHA1 68b3e5bb6c18557b0f9b4a20cc7414aa8c906fc6 SHA256 a4b4d1c6a4e5ddf7589064b14bc6f9b681a49d80a4e4cdd57c98862f2d5ba4d7
-EBUILD mozilla-thunderbird-3.0.1.ebuild 7137 RMD160 80ada73caed104cda34d2d5bfe93215f4d13c3ef SHA1 1c5ef674c48a4c9ec9251a24ece6f85b69192b3c SHA256 de80021f7cf1c08626ba93dd6b4f8721d1a348fe86fd32941a5fdf4b188ff82d
-MISC ChangeLog 47246 RMD160 eb484c99721fe3ff779b5705b24e8d05c51c223c SHA1 5e27694888daba15eb92a2709da1007f482ecdda SHA256 efb34fb02b51e9bc8ac4956abdb6f937958adbe55d2076a52427be0c31f57aef
+EBUILD mozilla-thunderbird-3.0.1.ebuild 7140 RMD160 9e383a916ee941db0e72d1df2985fd8d9bdb9376 SHA1 8799f7e95147e77aff2d12259d675d416a637d44 SHA256 e23174e095ece5bc87875603a648add4479ddce26b249495bfc1c91e1ed94478
+MISC ChangeLog 47377 RMD160 c48f2419382b26c4ac0cae73d5edb347adec56b0 SHA1 fead1ab9645b0d20a2e5ae12120afbddcf9133a3 SHA256 d0cea187f82208ccbda4a722d4a3eef47b5bed83dd0385029f444d80e3e91b4d
 MISC metadata.xml 514 RMD160 9ed553945939a94076009204c9ecf8c464e32847 SHA1 2fa178c530093f0f246f9f14a859d4229212ddc3 SHA256 5bb8301791d5d3e62a34cc1ff7788c5febbc6aa49853e1975f9adec3977bfd51
